--- a/Format.css
+++ b/Format.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color: #000000;
     
 }
 #navLeft {
@@ -28,17 +28,19 @@ body {
 
 /* Change the link color to #111 (black) on hover */
 #nav li a:hover {
-    background-color: #111;
+    background-color: black;
     border-radius: 50px;
 }
 
-#background {
+#hero {
     width: 100%; 
     height: 100%; 
-    position: auto; 
+    position: center; 
     left: 0px; 
     top: 0px; 
     z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
+    text-align: center;
+    overflow: hidden;
 }
 
 .stretch {
@@ -57,12 +59,11 @@ body {
     color: #b70101;
 }
 h1{
-    font-style: italic;
     text-decoration: none;
-    font-family: 'Anivers', serif;
-    font-size: 20px;
+    font-family: 'Lato', serif;
+    font-size: 80px;
     text-align: center;
-    color: black;
+    color: white;
 }
 h2{
     text-decoration: none;
