--- a/Format.css
+++ b/Format.css
@@ -22,7 +22,7 @@ body {
     text-align: right;
     padding: 30px;
     text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 23px;
 }
 
@@ -53,7 +53,7 @@ body {
 }
 #title{
     text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 45px;
     text-align: center;
     color: #b70101;
@@ -67,28 +67,28 @@ h1{
 }
 h2{
     text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 35px;
     text-align: center;
     color: black;
 }
 h3{
     text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 20px;
     text-align: center;
     color: white;
 }
 h4{
     text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 30px;
     text-align: center;
     color: #b70101;
 }
 h5{
     text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 24px;
     text-align: center;
     color: black;
@@ -96,7 +96,7 @@ h5{
 }
 p {
     text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 25px;
     text-align: center;
     color: black;
@@ -109,7 +109,7 @@ p {
 }
 #mainText{
      text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 25px;
     text-align: center;
     color: black;
@@ -195,6 +195,7 @@ a:hover{
 
    height: auto;
   line-height: 90px;
+  text-align: center;
 }
 
 
@@ -245,13 +246,22 @@ margin-left: 100px;
 } 
 .footerList a{
    text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 20px;
     text-align: center;
     color: white;
+    padding: 20px;
 }
 .footerList a:hover{
     color: #0EBFE9;
+}
+.footerListWords a {
+      text-decoration: none;
+    font-family: 'Lato', serif;
+    font-size: 20px;
+    text-align: center;
+    color: white;
+    padding: 20px;
 }
 
 .resumeFlex {
@@ -349,7 +359,7 @@ margin-left: 100px;
     text-align: right;
     padding: 7px;
     text-decoration: none;
-    font-family: 'Anivers', serif;
+    font-family: 'Lato', serif;
     font-size: 20px;
 }
 .paragraph{
