--- a/Format.css
+++ b/Format.css
@@ -32,15 +32,21 @@ body {
     border-radius: 50px;
 }
 
-#hero {
+/*#hero {
     width: 100%; 
-    height: 100%; 
-    position: center; 
-    left: 0px; 
-    top: 0px; 
-    z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
+    height: auto; 
+    position: relative; 
+
+    z-index: -1;  Ensure div tag stays behind content; -999 might work, too. 
     text-align: center;
     overflow: hidden;
+}*/
+#hero{
+  line-height: .5; 
+  position: relative;
+}
+#hero img {
+    width: 100%; 
 }
 
 .stretch {
@@ -70,13 +76,13 @@ h2{
     font-family: 'Lato', serif;
     font-size: 35px;
     text-align: center;
-    color: black;
+    color: white;
 }
 h3{
     text-decoration: none;
     font-family: 'Lato', serif;
     font-size: 20px;
-    text-align: center;
+    text-align: left;
     color: white;
 }
 h4{
@@ -169,8 +175,28 @@ p {
     column-width: auto;
     overflow: hidden;
 }
-#columnImages{
+.backgroundIMG {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
 }
+.backgroundIMG h3 {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 20%;
+    padding-left: 100px;
+}
+.backgroundIMG h3 span {
+    color: white; 
+   font: bold 24px/45px Lato, Lato; 
+   letter-spacing: -1px;  
+   padding: 10px;
+}
+.backgroundIMG h3 span.spacer {
+    padding: 0 5px;
+}
+
 .paragraph { 
     margin-left: 100px;
     margin-right: 100px;
@@ -274,34 +300,28 @@ margin-left: 100px;
     align-content: stretch;
 }
 
-.optum{
-    vertical-align: text-top;
-    float: right;
-    margin-right: 50px;
-    margin-left: -600px;
+@media (max-width: 1600px){
+  .backgroundIMG h3 {
+    width: 100%;
+    padding-left: 0px;
+    margin-top: 0px;
+    }
 }
-.uMark{
-    vertical-align: text-top;
-    float: right;
-    margin-right: 100px;
-    margin-left: -600px;
+@media (max-width: 862px){
+  .backgroundIMG h3 {
+    width: 60%;
+    padding-left: 0px;
+    margin-top: 0px;
+    }
 }
-.git {
-    vertical-align: text-top;
-    float: right;
-    margin-right: 175px;
-    margin-left: -600px;
-}
-@media (max-width: 1852px){
- .optum , .uMark , .git{
-      display: none;
-  }
+@media (max-width: 528px){
+  .backgroundIMG h3 {
+    width: 100%;
+    padding-left: 0px;
+    margin-top: 0px;
+    }
 }
 @media (max-width: 1000px){
-    .optum , .uMark , .git{
-      display: none;
-  }
-
 
     #columns{
          -webkit-column-count: 1; /* Chrome, Safari, Opera */
@@ -330,10 +350,10 @@ margin-left: 100px;
     overflow: hidden;
 
 }
-   p {
-        margin-left: 0;
-        margin-right: 0;
-    }
+p {
+    margin-left: 0;
+    margin-right: 0;
+}
 #navLeft{
 
     text-align: center;
@@ -377,4 +397,27 @@ margin-left: 100px;
 .twoColumnFlexHorizontal{
 flex-direction: column;
 }
+h1 {
+    font-size: 40px;
+    }
+h2{
+    font-size: 30px;
+}
+
+.footerList a{
+    padding: 0px;
+    font-size: 12px;
+}
+.footerListWords a{
+    padding: 10px;
+    font-size: 17px;
+}
+}
+  @media screen and (min-width: 75em) {
+    #hero img {
+      object-fit: cover;
+      object-position: 0% 22%;
+      /*the defualt was at 400px for max-height*/
+      max-height: 450px; 
+    }
 }
