--- a/Format.css
+++ b/Format.css
@@ -113,7 +113,9 @@ h2{
     font-size: 35px;
     text-align: center;
     color: white;
+    padding-bottom: 140px;
 }
+
 h3{
     text-decoration: none;
     font-family: 'Lato', serif;
@@ -227,8 +229,8 @@ p {
 .backgroundIMG h3 span {
     color: white; 
    font: bold 24px/45px Lato, Lato; 
-   letter-spacing: -1px;  
    padding: 10px;
+
 }
 .backgroundIMG h3 span.spacer {
     padding: 0 5px;
@@ -350,6 +352,9 @@ margin-left: 100px;
     padding-left: 0px;
     margin-top: 0px;
     }
+    h2 {
+    padding-bottom: 0px;
+}
 }
 @media (max-width: 528px){
   .backgroundIMG h3 {
@@ -357,13 +362,20 @@ margin-left: 100px;
     padding-left: 0px;
     margin-top: 0px;
     }
-
+    .backgroundIMG h3 span {
+        font-size: 20px;
+    }
    #nav li a {
         font-size: 15px;
     }
+    h2 {
+    padding-bottom: 0px;
+}
 }
 @media (max-width: 1000px){
-
+h2 {
+    padding-bottom: 0px;
+}
     #columns{
          -webkit-column-count: 1; /* Chrome, Safari, Opera */
     -moz-column-count: 1; /* Firefox */
