--- a/Format.css
+++ b/Format.css
@@ -80,6 +80,9 @@ align-self: auto;
   line-height: .5; 
   position: relative;
 }
+#hero h1 {
+    margin-top: 100px;
+}
 #hero img {
     width: 100%; 
 }
@@ -112,7 +115,7 @@ h2{
     font-size: 35px;
     text-align: center;
     color: white;
-    padding-bottom: 140px;
+    padding-bottom: 70px;
 }
 
 h3{
