--- a/Format.css
+++ b/Format.css
@@ -348,6 +348,18 @@ margin-left: 100px;
     margin-left: auto;
     margin-right: auto
 }
+/*Basic css for now. Will need to change once other content added*/
+.aboutBody p{
+    text-decoration: none;
+    font-family: 'Lato', serif;
+    font-size: 28px;
+    text-align: center;
+    color: white;
+    margin-left: 100px;
+    margin-right: 100px;
+
+}
+
 @media (max-width: 1600px){
   .backgroundIMG h3 {
     width:90%;
