--- a/Format.css
+++ b/Format.css
@@ -47,6 +47,14 @@ video {
     height: 800px;
     background-color: #333333;
 }
+.videoBackgroundAbout {
+    display: block;
+    height: 800px;
+    background-color: #333333;
+}
+.videoBackgroundAbout h2 {
+    padding-top: 100px;
+}
 iframe {
     display: block;
     margin: 0 auto;
@@ -331,37 +339,6 @@ margin-left: 100px;
     margin-left: auto;
     margin-right: auto
 }
-/*Basic css for now. Will need to change once other content added*/
-.aboutBody p{
-    text-decoration: none;
-    font-family: 'Lato', serif;
-    font-size: 28px;
-    text-align: left;
-    color: white;
-    margin-left: 80px;
-    margin-right: 200px;
-
-}
-.aboutBody h2{
-    margin-bottom: -70px;
-}
-.aboutBody p {
-    line-height: 39px;
-}
-@media (max-width: 1060px){
-    .aboutBody p{
-    font-size: 20px;
-    margin-left: 0px;
-    margin-right: 0px;
-
-}
-.aboutBody h2{
-    margin-bottom: 0px;
-}
-.aboutBody p {
-    line-height: 30px;
-}
-}
 @media (max-width: 862px){
     h2 {
     padding-bottom: 0px;
@@ -375,6 +352,18 @@ margin-left: 100px;
         font-size: 20px;
     }
 }
+.aboutBody p {
+    text-align: left;
+    margin-left: 10px;
+}
+.aboutBody img {
+  float: right;
+    margin: 0 0 10px 10px;
+}
+.aboutBody h2 {
+   
+    padding-bottom: 0px;
+}
 @media (max-width: 528px){
    #nav li a {
         font-size: 15px;
@@ -382,6 +371,10 @@ margin-left: 100px;
     h2 {
     padding-bottom: 0px;
 }
+    .aboutBody img{
+        height: 325px;
+        width: auto;
+    }
 }
 @media (max-width: 1180px) {
      .backgroundIMG img {
@@ -413,7 +406,7 @@ margin-left: 100px;
     .videoBackground{
     display: block;
     height: 400px;
-}
+    }
     .videoBackground h2 {
         padding-top: 10px;
     }
@@ -424,6 +417,12 @@ margin-left: 100px;
     .videoBackground{
         padding-bottom: 20px;
     }
+    .videoBackgroundAbout h2 {
+        padding-top: 10px;
+    }
+    .videoBackgroundAbout {
+        height: 400px;
+    }
 }
 @media (max-width: 620px){
      video {
@@ -433,11 +432,16 @@ margin-left: 100px;
  .videoBackground{
     display: block;
     height: 350px;
-}
+    }
     iframe {
     height: 200px;
     width: auto;
-}
+    }
+ .videoBackgroundAbout{
+        display: block;
+        height: 300px;
+        padding-bottom: 20px;
+    }
 }
 @media (max-width: 1000px){
 h2 {
