--- a/Format.css
+++ b/Format.css
@@ -279,6 +279,49 @@ background-color: #b70101;
     background-color: white;
     color: white;
 }
+
+
+.execContainer {
+   padding: 0;
+  margin: 0;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+.execMember img {
+    width: 210px;
+    height: 200px;
+}
+.execMember {
+  background: none;
+  padding: 5px;
+  width: 210px;
+  height: 200px;
+  margin-top: 10px;
+  
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
 .columnOneHorizontal{
 order: 1;
 flex-basis: auto;
@@ -441,6 +484,10 @@ align-content: flex-start;
         height: 300px;
         padding-bottom: 20px;
     }
+    .execMember img {
+    width: 210px;
+    height: 200px;
+}
 }
 @media (max-width: 1000px){
 h2 {
