--- a/Format.css
+++ b/Format.css
@@ -301,7 +301,8 @@ background-color: #b70101;
 
 .execContainer {
    padding: 0;
-  margin: 0;
+  margin-left: 300;
+  margin-right: 300;
   list-style: none;
   
   display: -webkit-box;
@@ -446,6 +447,21 @@ align-content: flex-start;
         background-color: black;
         height: 500px;
      }
+      .execContainer {
+   padding: 0;
+  margin-left: 100;
+  margin-right: 100;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+} 
 }
 /*@media (min-width: 1300px){
     #hero img {
@@ -509,7 +525,6 @@ align-content: flex-start;
 h2 {
     padding-bottom: 0px;
 }
-    
     #columns{
          -webkit-column-count: 1; /* Chrome, Safari, Opera */
     -moz-column-count: 1; /* Firefox */
