--- a/Format.css
+++ b/Format.css
@@ -308,6 +308,21 @@ background-color: #b70101;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  text-decoration: none;
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+.fav_talks_container{
+ padding: 0;
+  margin-left: 300;
+  margin-right: 300;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
   
   -webkit-flex-flow: row wrap;
   justify-content: space-around;
