--- a/Format.css
+++ b/Format.css
@@ -452,7 +452,7 @@ align-content: flex-start;
 }
 @media (max-width: 528px){
    #nav li a {
-        font-size: 15px;
+        font-size: 12px;
     }
     h2 {
     padding-bottom: 0px;
@@ -575,7 +575,7 @@ align-content: flex-start;
         width: auto;
     }
     #hero h1 {
-      font-size: 15px;
+      font-size: px;
     }
     .backgroundIMG {
       height: 600px;
