--- a/Format.css
+++ b/Format.css
@@ -570,18 +570,25 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 650px){
-     #nav li a {
-        font-size: 9px;
-    }
+  .mainMenu {
+    list-style: none;
+    margin: 0; 
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    text-align: center;
+    background: #b70101;
+
+}
     .backgroundIMGsmall img {
         height: 100px;
         width: auto;
     }
     #hero h1 {
-      font-size: 19px;
+      font-size: 25px;
     }
     .backgroundIMG {
-      height: 600px;
+      height: 1000px;
     }
      video {
         height: 200px;
