--- a/Format.css
+++ b/Format.css
@@ -558,6 +558,9 @@ align-content: flex-start;
     text-align: center;
     padding-right: 200px;
   }
+  #left {
+    padding: 10rem;
+  }
   .mainMenu {
     list-style: none;
     margin: 0; 
