--- a/Format.css
+++ b/Format.css
@@ -560,13 +560,14 @@ align-content: flex-start;
   }
   #left {
     padding-right: 100px;
+    text-align: center;
   }
   .mainMenu a {
     font-size: 2px;
   }
   .mainMenu {
     list-style: none;
-    margin: 0; 
+    margin: 5rem; 
     display: flex;
     flex-flow: row;
     justify-content: center;
