--- a/Format.css
+++ b/Format.css
@@ -557,7 +557,8 @@ align-content: flex-start;
   #left a {
     text-align: center;
     padding-right: 200px;
-    font-size: 20px;
+    font-size: 40px;
+    padding-bottom: 5rem;
   }
   #left {
     padding-right: 200px;
