--- a/Format.css
+++ b/Format.css
@@ -563,31 +563,14 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 350px){
-  .left {
-float: left;
-order: 1;
-flex-basis: auto;
-flex: 0 1 auto;
-align-self: auto;
-
-}
-.right{
-order: 2;
-float: right;
-flex-basis: auto;
-flex: 0 1 auto;
-align-self: auto;
-}
-  #nav li a {
+  #footer a {
     font-size: 12px;
+    color: black; 
+  }
+  #nav li a {
+    font-size: 10px;
     font-weight: -2px;
     text-align: center;
-}
-  .mainMenu {
-     text-align: center; 
-    justify-content: row wrap;
-    align-content: center;
-
 }
     .backgroundIMGsmall img {
         height: 100px;
@@ -597,7 +580,7 @@ align-self: auto;
       font-size: 32px;
     }
     .backgroundIMG {
-      /*always overlying image*/
+      /*always overlying image fix later*/
     }
      video {
         height: 200px;
@@ -625,9 +608,6 @@ align-self: auto;
 }
   .footerList a {
     font-size: 9px;
-  }
-  .columnTwo a {
-    font-size:  1px;
   }
 }
 @media handheld {
