--- a/Format.css
+++ b/Format.css
@@ -563,9 +563,9 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 350px){
-  #footer a {
+  .footerList a {
     font-size: 12px;
-    color: black; 
+    line-height: 10px;
   }
   #nav li a {
     font-size: 10px;
