--- a/Format.css
+++ b/Format.css
@@ -563,6 +563,16 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 350px){
+  .mainMenu {
+    list-style: none;
+    margin: 0; 
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-end;
+
+    background: #b70101;
+
+}
   .footerList a {
     font-size: 12px;
     line-height: 20px;
@@ -615,9 +625,7 @@ align-content: flex-start;
   .footerList a {
     font-size: 9px;
   }
-  .left{
-    font-size: 2px;
-  }
+
 }
 @media handheld {
  /*maybe solution*/
