--- a/Format.css
+++ b/Format.css
@@ -567,9 +567,9 @@ align-content: flex-start;
     list-style: none;
     margin: 0; 
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row nowrap;
     justify-content: flex-end;
-
+    text-align: center;
     background: #b70101;
 
 }
