--- a/Format.css
+++ b/Format.css
@@ -571,7 +571,20 @@ align-content: flex-start;
     justify-content: flex-end;
     text-align: center;
     background: #b70101;
-
+}
+.right{
+float: left;
+order: 1;
+flex-basis: auto;
+flex: 0 1 auto;
+align-self: center;
+}
+.left{
+  float: left;
+order: 2;
+flex-basis: auto;
+flex: 0 1 auto;
+align-self: center;
 }
   .footerList a {
     font-size: 12px;
