--- a/Format.css
+++ b/Format.css
@@ -509,6 +509,9 @@ align-content: flex-start;
     }
 }*/
 @media (max-width: 980px){
+  #nav a{
+    font-size: 10px;
+  }
     .backgroundIMGsmall img {
         height: 300px;
     }
@@ -568,7 +571,7 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 350px){
-  
+
 /*  .mainMenu {
     list-style: none;
     margin: 0; 
