--- a/Format.css
+++ b/Format.css
@@ -596,6 +596,31 @@ align-content: flex-start;
     align-self: center;
     text-align: center;
   }
+}
+
+/*  .mainMenu {
+    list-style: none;
+    margin: 0; 
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    text-align: center;
+    background: #b70101;
+}
+.right{
+float: right;
+order: 1;
+flex-basis: auto;
+flex: 0 1 auto;
+align-self: center;
+}
+.left{
+  float: left;
+order: 2;
+flex-basis: auto;
+flex: 0 1 auto;
+align-self: center;
+}
   .footerList a {
     font-size: 12px;
     line-height: 20px;
@@ -648,6 +673,7 @@ align-content: flex-start;
   .footerList a {
     font-size: 9px;
   }
+*/
 }
 @media handheld {
  /*maybe solution*/
