--- a/Format.css
+++ b/Format.css
@@ -571,6 +571,9 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 350px){
+  .mobileh1 h1 {
+    line-height: 30px;
+  }
   #nav {
     display: none;
   }
