--- a/Format.css
+++ b/Format.css
@@ -571,6 +571,12 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 350px){
+  .twoColumnFlexHorizontal img {
+    height: 200px;
+    width: 210px;
+    margin: 0 auto;
+    margin-left: 20px;
+}
   .mobileh1 h1 {
     line-height: 30px;
   }
