add google analytics

--- a/Format.css
+++ b/Format.css
@@ -571,11 +571,14 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 350px){
+  p img {
+    height: 100px;
+  }
   .twoColumnFlexHorizontal img {
     height: 200px;
     width: 210px;
     margin: 0 auto;
-    margin-left: 20px;
+    padding-right: 25px;
 }
   .mobileh1 h1 {
     line-height: 30px;
