--- a/Format.css
+++ b/Format.css
@@ -335,14 +335,14 @@ background-color: #b70101;
   margin-right: 250;
   list-style: none;
   
-  display: -webkit-box;
+   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  text-decoration: none;
+  
   -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-around
 }
 .execMember img {
     width: 210px;
@@ -503,7 +503,7 @@ align-content: flex-start;
   display: flex;
   
   -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-around
 } 
 }
 /*@media (min-width: 1300px){
