--- a/Format.css
+++ b/Format.css
@@ -571,6 +571,9 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 350px){
+  #hero h1 {
+    display: none;
+  }
    p {
     font-size: 12px;
 }
