center on mobile?

--- a/Format.css
+++ b/Format.css
@@ -628,13 +628,13 @@ align-content: flex-start;
   display: block;
   margin: 0 auto;
   margin-bottom: 20px;
-   padding-right: 40px;
+ /*  padding-right: 40px;*/
    }
  .columnTwoHorizontal img {
   display: block;
   margin: 0 auto;
   margin-bottom: 20px;
-  padding-right: 40px;
+  /*padding-right: 40px;*/
  }
   .mobileh1 h1 {
     line-height: 30px;
