--- a/Format.css
+++ b/Format.css
@@ -2,7 +2,7 @@
 necessary?
 */
 body {
-    background-color: #000000;
+    background-color: white;
     
 }
 /*
@@ -27,7 +27,9 @@ body {
 
 
 */
-
+.footerList p {
+  color: white;
+}
 .mobileNav{
   display: none;
 }
@@ -77,6 +79,7 @@ video {
 }
 .videoBackground h2 {
     padding-top: 100px;
+    color: white;
 }
 .videoBackground{
     display: block;
@@ -90,6 +93,7 @@ video {
 }
 .videoBackgroundAbout h2 {
     padding-top: 100px;
+    color: white;
 }
 .backgroundIMGsmall{
     display: none;
@@ -170,8 +174,11 @@ align-self: auto;
   position: relative;
 }
 #hero img {
-    width: 100%; 
+    width: 98%; 
     height: auto;
+    border:10px solid black;
+    display: block;
+    margin: 0 auto;
 }
 
 .stretch {
@@ -194,14 +201,14 @@ h1{
     font-family: 'Lato', serif;
     font-size: 80px;
     text-align: center;
-    color: white;
+    color: black;
 }
 h2{
     text-decoration: none;
     font-family: 'Lato', serif;
     font-size: 35px;
     text-align: center;
-    color: white;
+    color: black;
     padding-bottom: 70px;
 }
 
@@ -210,7 +217,7 @@ h3{
     font-family: 'Lato', serif;
     font-size: 20px;
     text-align: center;
-    color: white;
+    color: black;
 }
 h4{
     text-decoration: none;
@@ -232,7 +239,7 @@ p {
     font-family: 'Lato', serif;
     font-size: 23px;
     text-align: center;
-    color: white;
+    color: black;
     line-height: 40px;
     margin-left: 150px;
     margin-right: 150px;
@@ -256,6 +263,8 @@ p {
     height: auto;
     margin: 0 auto;
     display: block;
+    border: 5px;
+     border:4px solid black;
 }
 .backgroundIMG {
     position: relative;
@@ -351,6 +360,9 @@ background-color: #b70101;
   text-decoration: none;
   text-align: center;
   background-color: black;
+}
+.exec_bios_flex p {
+  color: white;
 }
 
 .execContainer {
@@ -851,7 +863,7 @@ h2{
     font-size: 17px;
 }
 .pastIMG img{
-    width: 100%;
+    width: 98%;
 }
 }
 .pastIMG h2 {
