--- a/Format.css
+++ b/Format.css
@@ -721,6 +721,7 @@ align-self: center;
     }
     .backgroundIMG {
       /*always overlying image fix later*/
+      height: 400px;
     }
      video {
         height: 200px;
