--- a/Format.css
+++ b/Format.css
@@ -713,10 +713,8 @@ align-self: center;
     text-align: center;
 }
     .backgroundIMGsmall img {
-        height: 150px;
-        width: auto;
-        display: block;
-        margin: 0 auto;
+      margin-top: 200px;
+       height: 0px;
     }
     #hero h1 {
       font-size: 32px;
