--- a/Format.css
+++ b/Format.css
@@ -639,7 +639,7 @@ align-content: flex-start;
     font-size: 20px;
     line-height: 25px;
 }
-  .twoColumnFlexHorizontal img{
+  .twoColumnFlexHorizontal{
      display: block;
   margin: 0 auto;
   margin-bottom: 20px;
@@ -648,13 +648,13 @@ align-content: flex-start;
   display: block;
   margin: 0 auto;
   margin-bottom: 20px;
-   padding-right: 40px;
+ /*  padding-right: 40px;*/
    }
  .columnTwoHorizontal img {
   display: block;
   margin: 0 auto;
   margin-bottom: 20px;
-  padding-right: 40px;
+  /*padding-right: 40px;*/
  }
   .mobileh1 h1 {
     line-height: 30px;
